examples/test/testpolicy4457.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4457
  namespace: namespace232
spec:
  podSelector:
    matchLabels:
      key13: value46
      key12: value40
      key30: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value36
      podSelector:
        matchLabels:
          key28: value20
